--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@
  */
 body {
     line-height: 1.7em;
-    color: #7f8c8d;
+    color: rgb(255, 255, 255);
     font-size: 13px;
 }
 
@@ -71,15 +71,15 @@ label {
  * I want my pure-button elements to look a little different
  */
 .pure-button {
-    background-color: #1f8dd6;
+    background-color: #fdce2e;
     color: white;
     padding: 0.5em 2em;
     border-radius: 5px;
 }
 
 a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
+    background: #fdce2e;
+    color: white;
     border-radius: 5px;
     font-size: 120%;
 }
@@ -96,7 +96,7 @@ a.pure-button-primary {
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
 .home-menu {
-    background: #2d3e50;
+    background: #fdce2e;
 }
 .pure-menu.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
@@ -115,9 +115,7 @@ a.pure-button-primary {
     color: white;
 }
 
-.home-menu a {
-    color: #6FBEF3;
-}
+
 .home-menu li a:hover,
 .home-menu li a:focus {
     background: none;
@@ -132,7 +130,7 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: linear-gradient(to right, #AECFE5, royalblue);
+    background: linear-gradient(to right, #314855, #314855);
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
@@ -210,7 +208,7 @@ a.pure-button-primary {
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+    color: #79ceb8;
 }
     .content-subhead i {
         margin-right: 7px;
@@ -218,7 +216,7 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background: linear-gradient(45deg, #AECFE5, royalblue);
+    background: linear-gradient(to right, #314855, #314855);
     color: rgb(224, 224, 224);
 }
 
